--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Adact</title>
-  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
-  <div class="l-container">
+  <div class="container">
 
 
+    <img id="phone" src="img/phone.png"></img>
+    <div class="app">
+      <div class="phone-toolbar">
+
+      </div>
+      <div class="top-bar">
+        <span class="navbar-logo">kinder</span>
+      </div>
+    </div>
 
   </div>
   <script>
