added hamburger menu

--- a/index.html
+++ b/index.html
@@ -13,15 +13,31 @@
   <div class="container">
 
 
-    <img id="phone" src="img/phone.png"></img>
+    <!--img id="phone" src="img/phone.png"></img-->
     <div class="app">
       <div class="phone-toolbar">
 
       </div>
       <div class="top-bar">
+        <div id="menuToggle">
+          <input type="checkbox" />
+            <span></span>
+          <span></span>
+          <span></span>
+
+          <ul id="menu">
+            <a href="#"><li>your profile</li></a>
+            <a href="#"><li>support</li></a>
+            <a href="#"><li>your local community</li></a>
+          </ul>
+        </div>
+      </nav>
         <span class="navbar-logo">kinder</span>
       </div>
+      <nav role="navigation">
+
     </div>
+    <div class="secret-background"></div>
 
   </div>
   <script>
