--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
 
 
-    <!--img id="phone" src="img/phone.png"></img-->
+    <img id="phone" src="img/phone.png"></img>
     <div class="app">
       <div class="phone-toolbar">
 
