--- a/index.html
+++ b/index.html
@@ -28,8 +28,46 @@
           <span></span>
 
           <ul id="menu">
-            <a href="#" id="map"><li>map</li></a>
-            <a href="#" id="projects"><li>projects near you</li></a>
+            <div class="menu-you">
+              <div class="menu-img">
+                <img src="img/thor.png"></img>
+                <div class="menu-coins">
+                  <img src="img/coins.png"></img>
+                  <p>3040</p>
+                </div>
+              </div>
+              <div class="menu-info">
+                <p class="menu-name">
+                  Þór J.
+                </p>
+                <div class="menu-level">
+                  Rank: Expert Volunteer
+                  <div class="menu-rank">
+                    <div id="rank-do"></div>
+                    <div id="rank-done"></div>
+                    <p>Gather 130 more kindness coins to reach the next rank!</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="links">
+              <a href="#" id="map"><li>Map</li></a>
+              <a href="#" id="projects"><li>Active missions</li></a>
+              <a href="#" id="offers"><li>My offers & requests</li></a>
+            </div>
+            <div class="milestone">
+              <h3>COMMUNITY MILESTONE</h3>
+              <div class="milestone-progress">
+                <div id="rank-do"></div>
+                <div id="rank-done"></div>
+                78%
+              </div>
+              <p>7 days left to complete 23 missions!</p>
+            </div>
+            <div class="menu-bottom">
+              <a href="#" id="leaderboard"><li>Leaderboard</li></a>
+              <a href="#" id="profile"><li>My profile</li></a>
+            <div>
           </ul>
         </div>
 <div class="preview-block" style="display:none">
