its all quite fine

--- a/index.html
+++ b/index.html
@@ -74,21 +74,23 @@
           </ul>
         </div>
 
-<div class="view mission-view" style="display:none">
+<div class="view mission-view" style="display:flex">
   <a href="#" id="volunteer">
     <div class="mission-type mission-type1">
-      <h2>Volunteering tasks</h2>
-      <p></p>
+      <img src="img/volunteer.png"></img>
+      <h2>Volunteer for tasks<div class="separator"></div></h2>
     </div>
   </a>
   <a href="#" id="items">
     <div class="mission-type mission-type2">
-      <h2>Donate items</h2>
+      <img src="img/donateitem.png"></img>
+      <h2>Donate items<div class="separator"></div></h2>
     </div>
   </a>
   <a href="#" id="projects">
     <div class="mission-type mission-type3">
-      <h2>Support projects</h2>
+      <img src="img/donate.png" style="width: 80px; height: 90px; bottom: 18px;"></img>
+      <h2>Support projects<div class="separator"></div></h2>
     </div>
   </a>
 </div>
@@ -143,7 +145,7 @@
 	</div>
 </div>
 
-<div class="view volunteer-view" style="display:flex">
+<div class="view volunteer-view" style="display:none">
   <h2>Volunteering tasks</h2>
   <div class="volunteering-task">
   	<div class="volunteering-image">
@@ -197,7 +199,7 @@
       <h2>Participate in Hack the Crisis Iceland</h2>
   	</div>
   </div>
-  <div class="volunteering-task">
+  <div class="volunteering-task" style="margin-bottom: 50px;">
   	<div class="volunteering-image">
       <img src="img/gamithra.jpg"></img>
   	</div>
