--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </ul>
         </div>
 
-<div class="view mission-view" style="display:flex">
+<div class="view mission-view" style="display:none">
   <a href="#" id="volunteer">
     <div class="mission-type mission-type1">
       <img src="img/volunteer.png"></img>
@@ -214,7 +214,7 @@
   </div>
 </div>
 
-<div class="view map-view" style="display:none">
+<div class="view map-view" style="display:flex">
   <img src="img/isf.png" class="map"></img>
   <img src="img/point.png" class="map-point" id="point-1"></img>
   <img src="img/point.png" class="map-point" id="point-2"></img>
